--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ng serve --port $PORT --host 0.0.0.0 --disable-host-check"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
