--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/HamadBakeel/another-git-project#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "formidable": "^2.0.1",
     "method-override": "^3.0.0"
   }
 }
